--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
   <body>
     <main>
       <div class="card">
-        <div class="hero"></div>
+        <div class="hero">
+          <img src="/images/drawers.jpg" alt="drawers" />
+        </div>
         <div class="card-body">
-          <h1>
+          <h3>
             Shift the overall look and feel by adding these wonderful touches to
             furniture in your home
-          </h1>
+          </h3>
           <p>
             Ever been in a room and felt like something was missing? Perhaps it
             felt slightly bare and uninviting. I’ve got some simple tips to help
@@ -33,14 +35,29 @@
             <div class="person">
               <img src="/images/avatar-michelle.jpg" alt="Michelle" />
             </div>
-            <h3>Michelle Appleton</h3>
-            <p>28 Jun 2020</p>
+            <div class="name">
+              <h4>Michelle Appleton</h4>
+              <p>28 Jun 2020</p>
+            </div>
             <div class="share">
               <img src="/images/icon-share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="social">
+            <p>SHARE</p>
+            <div class="social-links">
+              <img src="/images/icon-facebook.svg" alt="facebook" />
+              <img
+                src="/images/icon-twitter.svg"
+                alt="twitter"
+                class="twitter"
+              />
+              <img src="/images/icon-pinterest.svg" alt="pinterest" />
             </div>
           </div>
         </div>
       </div>
     </main>
+    <script src="/script.js"></script>
   </body>
 </html>
