--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <h4>Michelle Appleton</h4>
               <p>28 Jun 2020</p>
             </div>
-            <div class="share">
+            <div class="share active">
               <img src="/images/icon-share.svg" alt="share" />
             </div>
           </div>
@@ -54,6 +54,7 @@
               />
               <img src="/images/icon-pinterest.svg" alt="pinterest" />
             </div>
+            <div class="tooltip-arrow"></div>
           </div>
         </div>
       </div>
